# hackathon0-FTE-with-all-tier

bronze-tier/: .gitignore  LICENSE  README.md  generate_briefing.py  main.py  main_agent.py  pyproject.toml  skills.py  test_silver_tier.py
bronze-tier/ai-employee-vault/: Business_Goals.md  Dashboard.md
bronze-tier/ai-employee-vault/Done/: ..email_A shipment from order _2718136 is out for delivery_20260221_summary_completion_note.md  ..email_Hira_ our sale is live_ Let_s get you certified_20260221_175111_summary_completion_note.md  ..email_Last chance to get 60_ off Pro_20260221_175441_summary_completion_note.md  .coldest-cities_completion_note.md  .email_60_ off Pro sale extended_20260221_175642_completion_note.md  .email_60_ off Pro sale extended_20260221_175642_summary.md  .email_A shipment from order _2718136 is on the way_20260221_174525_completion_note.md  .email_A shipment from order _2718136 is on the way_20260221_174525_summary.md  .email_Action needed_ cluster deletion in 7 days_20260221_174220_completion_note.md  .email_Action needed_ cluster deletion in 7 days_20260221_174312_completion_note.md  .email_Action needed_ cluster deletion in 7 days_20260221_174312_summary.md  .email_Hira  Thank you_ Here_s Your Free Gift_20260221_174514_summary.md  .email_Hira_ AI isn_t slowing down in 2026 _ Don_t get le_20260221_174809_summary.md  .email_Hira_ is getting fit your 2026 resolution_ Let_s a_20260221_175700_summary.md  .email_Hurry_ Our _1 Best-Seller is Back and Selling Fast_20260221_174832_summary.md  (+11 more)
bronze-tier/mcp-servers/: email_mcp_server.py
(+151 files in other folders)
