[project]
name = "hackhathon0"
version = "0.2.0"
description = "Personal AI Employee - Silver Tier: Multi-channel AI assistant with LinkedIn, WhatsApp, MCP servers, and human-in-the-loop approval"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Hira Khalid", email = "hirashoaibisc@gmail.com" }
]
dependencies = [
    "watchdog>=4.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
]
